fix(traffic): remove double border

--- a/src/app/pages/e-commerce/traffic-reveal-card/front-side/traffic-front-card.component.scss
+++ b/src/app/pages/e-commerce/traffic-reveal-card/front-side/traffic-front-card.component.scss
@@ -17,6 +17,10 @@
     align-items: center;
     height: 4.5rem;
 
+    &:first-child {
+      border-top: none;
+    }
+
     > * {
       flex: 2;
     }
